--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,9 +4,12 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Greco!</h2>
-  <p>
-    Learn how to efficently recyle and get rid of larger waiste all while having fun
-  </p>
+<ion-content class="padding">
+  <button class="home_button" id="hbutton1">1 Plastic bottle</button>
+  <button class="home_button">1 glass bottle</button>
+  <button class="home_button">1 aluminium can</button>
+  <br/>
+  <button class="home_button">10 glass bottles</button>
+  <button class="home_button">10 Plastic bottles</button>
+  <button class="home_button">10 aluminium cans</button>
 </ion-content>
