--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -10,7 +10,9 @@
 <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
 <ion-list>
   <ion-item *ngFor="let item of items">
-    {{ item }}
+    <button (click)="itemtemp()" class="buttonsch">
+      {{ item }}
+    </button>
   </ion-item>
 </ion-list>
 </ion-content>
