Barcode API integration

--- a/src/pages/barcode/barcode.html
+++ b/src/pages/barcode/barcode.html
@@ -11,6 +11,8 @@
     <p>{{results.text}}</p>
     <p>{{results.format}}</p>
     <p>{{results.cancelled}}</p>
+    <p>{{itemname}}</p>
+    <p>{{string_parts}}</p>
   </div>
   <button class="buttonbar" (click)="scanBarcode()">Scan Barcode</button>
 </ion-content>
