--- a/source/pages/item/item.html
+++ b/source/pages/item/item.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Item Page
+      {{ itemTitle }}
     </ion-title>
   </ion-navbar>
 </ion-header>
