--- a/source/pages/item/item.html
+++ b/source/pages/item/item.html
@@ -13,7 +13,7 @@
     <br/> 
     <p class="itemname">{{itemTitle }} <p>
     <br/>
-    <p class="class">{{ itemCategory }}<p>
+    <p class="class">CATEGORY: {{ itemCategory }}<p>
 	<br/>
     <p class="point">POINTS: {{ itemPoints}}<p>
     <br/>
