--- a/home.html
+++ b/home.html
@@ -1,23 +1,28 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Greco</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-    Green Points
-    <ion-badge item-end>{{val}}</ion-badge>
-  </ion-item>
   <div class="buttonholder">
-    <p class="tittle">Greco</p>
-    <br/>
     <p class="body">Welcome to Greco! Here you will learn to efficently recycle all while earning points and having fun!</p>
+    <br/>
+    <button (click) = "update()" class="points">
+      <span id="ptittle">Click For Green Points:</span>
+      <br/>
+      <br/>
+      <br/>
+      <span id="pval">{{val}}</span>
+      <br/>
+      <br/>
+      <br/>
+    </button>
     <br/>
     <p class="instr">Quickly earn points by pressing the buttons below:</p>
     <br/>
-    <button (click)="pointsval()" class="home_button">1 plastic bottle</button>
-    <button (click)="pointsval()" class="home_button" id="1glass">1 glass bottle</button>
-    <button (click)="pointsval()" class="home_button">1 aluminium can</button>
+    <button (click)="ppointsval()" class="home_button">1 plastic bottle</button>
+    <button (click)="gpointsval()" class="home_button" id="1glass">1 glass bottle</button>
+    <button (click)="apointsval()" class="home_button">1 aluminium can</button>
   </div>
 </ion-content>
